--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,5 @@
  *
  *= require_tree .
  *= require_self
- *= require lumen
- *= require bootstrap/dist/css/bootstrap
+ *= require bootstrap/dist/css/bootstrap.css
  */
