--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <% Faculty.active.each do |faculty| %>
+            <% Faculty.active.order(:short).each do |faculty| %>
             <li><a href="#<%= faculty.short %>"><%= faculty.short %></a></li>
             <% end %>
           </ul>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="col-md-4">
-
+          <iframe style="width:100%; height:270px; border:none;" src="<%= asset_path('time.html') %>"></iframe>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
               <hr>
               <div class="row">
                 <div class="col-xs-3 col-md-4">
-                  <img style="width:100%" src="./HC Course Page_files/mnu_logo.png" class="img-responsive">
+                  <img style="width:100%" src="<%= asset_path('mnu_logo.png') %>" class="img-responsive">
                 </div>
                 <div class="col-xs-9 col-md-8">
                   <address>
