--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -106,7 +106,7 @@
             <div class="form-group <%= "has-error" if @course.errors[:fee].any? %> ">
               <%= f.label 'Fee', class:"col-sm-2 control-label"%>
               <div class="col-sm-10">
-                <%= f.number_field :fee, step: any, class:"form-control" %>
+                <%= f.number_field :fee, step: 1, class:"form-control" %>
                 <% if @course.errors[:fee].any? %>
                       <span class="help-block">
                       <% @course.errors.full_messages_for(:fee).each do |msg| %>
