--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,11 +44,8 @@
 
       <div class="page-header">
         <div class="row">
-          <div class="col-xs-7 col-md-6">
+          <div class="col-md-6">
             <h2><%= faculty.name %> | <small><%= faculty.short %></small></h2>
-          </div>
-          <div class="col-xs-5 col-md-6 text-right" style="padding-top: 30px;">
-
           </div>
         </div>
       </div>
