--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,11 +17,12 @@
       </tr>
       </thead>
       <tbody>
+      <% num = 0 %>
       <% @faculties.each do |faculty| %>
-        <% faculty.courses.each_with_index  do |course, index| %>
+        <% faculty.courses.each  do |course| %>
          <% if course.visible == true %>
           <tr>
-            <th scope="row"><%= index + 1 %></th>
+            <th scope="row"><%= num = num + 1 %></th>
             <td><a href="#<%= faculty.short %>"><%= course.name %></a></td>
             <td><%= course.faculty.short %></td>
             <td><%= course.level %></td>
