--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,26 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= csrf_meta_tags %>
+  <!-- Place this tag in your head or just before your close body tag. -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+  <meta property="og:url"           content="https://whispering-plains-9044.herokuapp.com/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="HC Course Page" />
+  <meta property="og:description"   content="Details of the courses avaible for June Intake 2016" />
+  <meta property="og:image"         content="<%= asset_path('mnu_logo.png') %>" />
+
 </head>
 <body style="padding-top: 45px;">
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=133594840025318";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -115,7 +133,17 @@
             <div class="col-md-4">
               <h4>Social Links</h4>
               <hr>
-
+              <div class="container" style="width: 100%">
+              <div class="fb-page" data-href="https://www.facebook.com/hithadhoocampus"   data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/hithadhoocampus"><a href="https://www.facebook.com/hithadhoocampus">Hithadhoo Campus, The Maldives National University</a></blockquote></div></div>
+              </div>
+              <div class="container" style="margin-top: 12px; width: 100% ">
+                <a href="https://twitter.com/mnuhc" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mnuhc</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              </div>
+              <div class="container" style="margin-top: 12px; width: 100%">
+                <!-- Place this tag where you want the widget to render. -->
+                <div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/115640344262820401976" data-rel="publisher"></div>
+              </div>
             </div>
           </div>
           <hr>
@@ -123,8 +151,19 @@
             <div class="col-xs-12 col-md-6">
               <p class="text-justify"><small>© MNU | Hithadhoo Campus 2016</small></p>
             </div>
-            <div class="col-xs-5 col-md-6 text-right">
 
+
+            <div class="col-xs-4 col-md-1 text-left pull-right">
+              <div class="g-plusone" data-size="medium" data-href="https://whispering-plains-9044.herokuapp.com/"></div>
+            </div>
+            <div class="col-xs-4 col-md-1 text-right pull-right">
+              <a  href="https://twitter.com/share" class="twitter-share-button" data-via="mnuhc" data-hashtags="MNU">Tweet</a>
+            </div>
+            <div class="col-xs-4 col-md-1 text-left pull-right">
+              <div class="fb-share-button"
+                   data-href="https://whispering-plains-9044.herokuapp.com/"
+                   data-layout="button_count">
+              </div>
             </div>
           </div>
         </footer>
