--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -37,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>">HC | Admin Panel</a>
+      <a class="navbar-brand" href="#">HC | Admin Panel</a>
     </div>
     <!-- /.navbar-header -->
 
