--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,7 +134,7 @@
               <h4>Social Links</h4>
               <hr>
               <div class="container" style="width: 100%">
-              <div class="fb-page" data-href="https://www.facebook.com/hithadhoocampus"   data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/hithadhoocampus"><a href="https://www.facebook.com/hithadhoocampus">Hithadhoo Campus, The Maldives National University</a></blockquote></div></div>
+              <div class="fb-page" data-href="https://www.facebook.com/mnuhc"   data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/hithadhoocampus"><a href="https://www.facebook.com/hithadhoocampus">Hithadhoo Campus, The Maldives National University</a></blockquote></div></div>
               </div>
               <div class="container" style="margin-top: 12px; width: 100% ">
                 <a href="https://twitter.com/mnuhc" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mnuhc</a>
