--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,6 +62,7 @@
           <% row_name = result == 6 ? cycle(st,'',name: 'div1') : cycle(st,'','', name: 'div1') %>
           <% row_name2 = result == 6 ? cycle('',st2,name: 'div2') : cycle('','',st2,name: 'div2') %>
           <%= current_cycle(name= 'div1').html_safe %>
+          <!-- The Cycle is <%= current_cycle(name= 'div1') %> -->
           <% if course.visible == true %>
                 <div class="col-md-<%= result %>">
                   <div class="panel panel-primary">
