--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,6 +102,8 @@
                 <%= current_cycle(name= 'div2').html_safe %>
               <% end %>
           <% end %>
+      <% reset_cycle("div1") %>
+      <% reset_cycle("div2") %>
       <% end %>
 
     </div>
