--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -44,6 +44,7 @@
     $(document).ready(function() {
         $('#course-table').DataTable({
             responsive: true
+            stateSave: true
         });
     } );
 </script>
