--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-8">
   <h2 class="page-header">Faculties <%= link_to 'New Faculty', new_faculty_path, class:"btn btn-success pull-right" %></h2>
-  <table id="product-table" class="table table-striped table-bordered table-hover dataTable no-footer">
+  <table id="faculty-table" class="table table-striped table-bordered table-hover dataTable no-footer">
     <thead>
     <tr>
       <th>Name</th>
@@ -48,8 +48,9 @@
 
 <script>
     $(document).ready(function() {
-        $('#product-table').DataTable({
+        $('#faculty-table').DataTable({
             responsive: true
+            stateSave: true
         });
     } );
 </script>
