--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -49,7 +49,7 @@
 <script>
     $(document).ready(function() {
         $('#faculty-table').DataTable({
-            responsive: true
+            responsive: true,
             stateSave: true
         });
     } );
