--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -43,7 +43,7 @@
 <script>
     $(document).ready(function() {
         $('#course-table').DataTable({
-            responsive: true
+            responsive: true,
             stateSave: true
         });
     } );
