--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>HC Course Page</title>
+  
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -14,6 +15,7 @@
   <meta property="og:title"         content="HC Course Page" />
   <meta property="og:description"   content="Details of the courses avaible for June Intake 2016" />
   <meta property="og:image"         content="<%= asset_path('mnu_logo.png') %>" />
+  <meta property="fb:pages" content="238789776174291" />
 
 </head>
 <body style="padding-top: 45px;">
