--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= csrf_meta_tags %>
-  <!-- Place this tag in your head or just before your close body tag. -->
+  <!-- Place this tag in your head or just before  tedt our close body tag. -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <meta property="og:url"           content="https://whispering-plains-9044.herokuapp.com/" />
